# Delay-Ui-v2

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: AutoGainIndicator.cpp  AutoGainIndicator.h  DelayLookAndFeel.cpp  DelayLookAndFeel.h  IconToggleButton.cpp  IconToggleButton.h  RotaryKnob.cpp  RotaryKnob.h  TempoDial.cpp  TempoDial.h  ToggleSwitch.cpp  ToggleSwitch.h  VUMeter.cpp  VUMeter.h  WireframeVisualizer.cpp  WireframeVisualizer.h
